Correcion de Bugs, y se agregan permisos a la vista de Role
